Translated and null refresh fixed.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">ISSTracker</string>
+    <string name="home_location">"Your home location is: "</string>
+    <string name="please_update">Please update below</string>
+    <string name="toast">Pls gib perms</string>
+    <string name="go_button">Go!</string>
+    <string name="press_here">Press here to go to the map.</string>
 </resources>
