--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -6,4 +6,5 @@
     <string name="toast">You won\'t be able to see your location without the asked permission.</string>
     <string name="go_button">Go!</string>
     <string name="press_here">Press here to go to the map.</string>
+    <string name="close_toast">The ISS is visible in the sky.</string>
 </resources>
